3/4 route controller tests working with the RESTful controller